--- a/src/app/edit-users/edit-users.component.html
+++ b/src/app/edit-users/edit-users.component.html
@@ -1,1 +1,7 @@
-<p>edit-users works!</p>
+<input #newUser>
+<button (click)="add(newUser.value)">Add</button>
+<button (click)="remove()">Remove</button>
+
+
+<input #newItem>
+<button (click)="addNewItem(newItem.value)">Add to parent's list</button>
