output without shit

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,7 @@
 Dashboard componenet
 
 <app-users-list [users]="userList"></app-users-list>
-<app-edit-users (addUserEvent)="addUserfunc($event)" (newItemEvent)="addItem($event)"></app-edit-users>
+<app-edit-users (addUserEvent)="addUserFunc($event)" (removeUserEvent)="removeUserFunc($event)"></app-edit-users>
 <ul>
     <li *ngFor="let user of userList">{{user}}</li>
 </ul>
-
-<!-- <ul>
-    <li *ngFor="let item of items">{{item}}</li>
-</ul> -->
