--- a/src/app/user-list-item/user-list-item.component.html
+++ b/src/app/user-list-item/user-list-item.component.html
@@ -1,8 +1,3 @@
-
-<ul class="userListItems">
-    <li *ngFor="let u of user">{{u}}</li>
+<ul *ngFor="let u of user" class="userListItems">
+    <li>{{u}}</li>
 </ul>
-
-
-
- <!-- <p>{{user}}</p>  -->
