--- a/src/app/edit-users/edit-users.component.css
+++ b/src/app/edit-users/edit-users.component.css
@@ -1,23 +1,23 @@
 .editusers {
 position: absolute;
 top: 100px;
-left: 400px;
+left: 450px;
 width: 300px;
-height: 150px;
+height: 120px;
+background: rgb(236, 236, 236);
+border-radius: 5px;
+padding: 20px;
 }    
-    
+
 .input {
-margin-bottom: 5px;
+    margin-bottom: 10px;
 }
     
 .btn {
 margin-right: 5px;
 }
     
-.panel-body {
-background-color: rgb(236, 236, 236);
-}
-    
 .form-control {
-border: 1px solid #007bff;
+border: 2px solid  #54a7ff;
+box-shadow: 0px 0px 0px 3px rgba(45, 142, 253, 0.4);
 }
