--- a/src/app/user-list-item/user-list-item.component.css
+++ b/src/app/user-list-item/user-list-item.component.css
@@ -1,7 +1,8 @@
 .userListItems {
 margin-bottom: 15px;
 border-radius: 4px;
-border: 1px solid lightgray;
+border: 1.5px solid lightgray;
 background-color: white;
 padding: 10px;
+margin-bottom: 12px;
 }
