login form present

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<div class="login">
+    <form class="px-4 py-3">
+        <div class="form-group">
+            <label for="exampleDropdownFormEmail1">Please login</label>
+            <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="username">
+        </div>
+        <button type="submit" class="btn btn-success">Log in</button>
+    </form>
+</div>
