--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,6 +4,6 @@
             <label for="exampleDropdownFormEmail1">Please login</label>
             <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="username">
         </div>
-        <button type="submit" class="btn btn-success">Log in</button>
+        <button type="submit" class="btn btn-success" (click)="login()">Log in</button>
     </form>
 </div>
