toggleColor for a-link fixed

--- a/src/app/user-list-item/user-list-item.component.html
+++ b/src/app/user-list-item/user-list-item.component.html
@@ -1,1 +1,5 @@
-<li class="userListItems">{{user}}</li>
+<li class="userListItems">
+    <a [routerLink]="[ '/user' ]" routerLinkActive="active" [style.color]="textColor" >{{user}}</a>
+</li>
+
+
