--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,8 +2,13 @@
     <form class="px-4 py-3">
         <div class="form-group">
             <label for="exampleDropdownFormEmail1">Please login</label>
-            <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="username">
+            <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="username"
+                [(ngModel)]="userName" name="username">
         </div>
         <button type="submit" class="btn btn-success" (click)="login()">Log in</button>
     </form>
+</div>
+
+<div *ngIf="userIsLoggedIn">
+    ngIf funkar iaf
 </div>
