login boolean solved

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,3 +7,13 @@
     background: #eaeef0;
     border-radius: 4px;
 }
+
+.logout {
+    position: relative;
+    width: 230px;
+    height: 118px;
+    top: 30px;
+    left: 36.1%;
+    background: #eaeef0;
+    border-radius: 4px;
+}
