--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,9 @@
-<app-users-list [users]="userList"></app-users-list>
-<app-edit-users (addUserEvent)="addUserFunc($event)" (removeUserEvent)="removeUserFunc($event)"></app-edit-users>
+<ng-container *ngIf="checkUser() == true; then thenTemplate; else elseTemplate"></ng-container>
+<ng-template #thenTemplate>
+    <app-users-list [users]="userList"></app-users-list>
+    <app-edit-users (addUserEvent)="addUserFunc($event)" (removeUserEvent)="removeUserFunc($event)"></app-edit-users>
+</ng-template>
+
+<ng-template #elseTemplate>
+    <p class="restricted"> Please log in to see this content! </p>
+</ng-template>
