routing id for singleUser fixed

--- a/src/app/user-list-item/user-list-item.component.html
+++ b/src/app/user-list-item/user-list-item.component.html
@@ -1,5 +1,5 @@
 <li class="userListItems">
-    <a [routerLink]="[ '/user' ]" routerLinkActive="active" [style.color]="textColor" >{{user}}</a>
+    <a [routerLink]="[ '/user', user ]" routerLinkActive="active" [style.color]="textColor" >{{user}}</a>
 </li>
 
 
