--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,13 +12,20 @@
 
 <ng-template #elseTemplate>
     <div class="login">
-        <form class="px-4 py-3">
+        <form class="px-4 py-3" (ngSubmit)="login()" #loginForm="ngForm">
+            <label for="loginModal">Please login</label>
             <div class="form-group">
-                <label for="exampleDropdownFormEmail1">Please login</label>
-                <input type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="username"
-                    [(ngModel)]="userName" name="username">
+                <label for="email">Email</label>
+                <input class="form-control" type="text" required="" minlength="10" [(ngModel)]="model.email"
+                    name="email" #email="ngModel">
+                <div class="alert alert-danger" [hidden]="email.valid || email.pristine">
+                    Incorrect email!
+                </div>
+                <label for="password">Password</label>
+                <input class="form-control" type="password" required="" minlength="10" [(ngModel)]="model.password"
+                    name="password">
             </div>
-            <button type="submit" class="btn btn-success" (click)="login()">Log in</button>
+            <button class="btn btn-success" type="submit" [disabled]="!loginForm.form.valid">Login</button>
         </form>
     </div>
 </ng-template>
