--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -1,6 +1,6 @@
 <div class="userlist">
-    <app-user-list-item [textColor]="textColor" [user]="user" *ngFor="let user of users">
-        <ul></ul>
-    </app-user-list-item>
+    <ul>
+        <app-user-list-item [textColor]="textColor" [user]="user" *ngFor="let user of users"></app-user-list-item>
+    </ul>
     <button type="button" class="btn btn-primary" (click)="toggleColor()">Toggle Colors</button>
 </div>
