a little bit further

--- a/src/app/single-user/single-user.component.html
+++ b/src/app/single-user/single-user.component.html
@@ -1,2 +1,6 @@
-<p>single-user works!</p>
-( {{ value }} )
+<!-- <p>username {{ user.username }}</p>
+<p>name: {{ user.name }} </p>
+<p>city: {{ user.address.city }} </p>
+<p>street: {{ user.adress.street }} </p>
+<p>zipcode: {{ user.adress.zipcode }} </p> -->
+{{id}}
