--- a/src/app/user-list-item/user-list-item.component.html
+++ b/src/app/user-list-item/user-list-item.component.html
@@ -1,5 +1,3 @@
 <li class="userListItems">
-    <a [routerLink]="[ '/user', user.name ]" routerLinkActive="active" [style.color]="textColor" >{{user.name}}</a>
+    <a [routerLink]="[ '/user', user.id ]" routerLinkActive="active" [style.color]="textColor" >{{user.name}}</a>
 </li>
-
-
