--- a/src/app/single-user/single-user.component.html
+++ b/src/app/single-user/single-user.component.html
@@ -1,6 +1,8 @@
-<!-- <p>username {{ user.username }}</p>
-<p>name: {{ user.name }} </p>
+ 
+<div class="container">
+<h4> {{ user.username }} </h4>
+<p class="grey"> {{ user.name }} </p>
+<p>street: {{ user.address.street }} </p>
+<p>zipcode: {{ user.address.zipcode }} </p>
 <p>city: {{ user.address.city }} </p>
-<p>street: {{ user.adress.street }} </p>
-<p>zipcode: {{ user.adress.zipcode }} </p> -->
-{{id}}
+</div>
