--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-<p id="center">The page you are looking for does not exist!</p>
+<p id="center">404: The page you are looking for does not exist!</p>
 </div>
