fixed errors with undefined user in single-user-component

--- a/src/app/user-list-item/user-list-item.component.css
+++ b/src/app/user-list-item/user-list-item.component.css
@@ -5,8 +5,9 @@ border: 1.5px solid lightgray;
 background-color: white;
 padding: 10px;
 margin-bottom: 12px;
+text-align: center;
 }
 
- a {
+a {
 text-decoration: none;
 }
