--- a/src/app/users-list/users-list.component.css
+++ b/src/app/users-list/users-list.component.css
@@ -1,7 +1,7 @@
 .userlist {
 position: absolute;
 top: 100px;
-left: 150px;
+left: 28%;
 width: 250px;
 background: rgb(236, 236, 236);
 border-radius: 5px;
