--- a/src/app/edit-users/edit-users.component.css
+++ b/src/app/edit-users/edit-users.component.css
@@ -1,7 +1,7 @@
 .editusers {
 position: absolute;
 top: 100px;
-left: 450px;
+left: 52%;
 width: 300px;
 height: 120px;
 background: rgb(236, 236, 236);
