--- a/src/app/page-not-found/page-not-found.component.css
+++ b/src/app/page-not-found/page-not-found.component.css
@@ -5,6 +5,8 @@ background: orange;
 width: 350px;
 padding: 20px;
 border-radius: 10px;
+border: 2px solid black;
+box-shadow: 12px 12px 10px;
 }
 
 #center {
